# CS2ProximityVoiceChat

./: CMakeLists.txt  plugin.cpp  plugin.def  proximityChat.js  server.js
